ELS Code/main/default/objects/Batch_Log__c/Batch_Log__c.object-meta.xml
<CustomObject>
    <label>Batch Log</label>
    <nameField>
        <label>Batch Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>