ELS Code/main/default/objects/Batch_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Batch Logs</relationshipLabel>
    <relationshipName>Batch_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>