ELS Code/main/default/objects/Batch_Log__c/fields/Is_Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Address__c</fullName>
    <formula>Contact__r.Is_Default_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Default Address</label>
    <type>Checkbox</type>
</CustomField>