ELS Code/main/default/objects/Batch_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Batch Logs</relationshipLabel>
    <relationshipName>Batch_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>