ELS Code/main/default/objects/Batch_Log__c/fields/Rule_for_Merging__c.field-meta.xml
<CustomField>
    <fullName>Rule_for_Merging__c</fullName>
    <label>Rule for Merging</label>
    <length>225</length>
    <type>Text</type>
</CustomField>