ELS Code/main/default/objects/Batch_Log__c/listViews/All_Batch.listView-meta.xml
<ListView>
    <fullName>All_Batch</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Batch</label>
</ListView>