ELS Code/main/default/objects/Batch_Log__c/listViews/Batches_Yesterday.listView-meta.xml
<ListView>
    <fullName>Batches_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Batches Yesterday</label>
</ListView>